# SmartFileOrganizer

./: .gitignore  CLAUDE.md  DESIGN.md  DESIGN_SPEC.md  README.md  TODO.md  UI_STRUCTURE.md  main.py  mappings.py  models.py  organizer.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py
config/: settings.json
config/rules/: _example.json
core/: __init__.py  classifier.py  file_ops.py  metadata.py  pattern_matcher.py  scanner.py
gui/: __init__.py  main_window.py  preview_tree.py  rules_panel.py  settings_panel.py  theme.py  worker.py
history/: __init__.py  database.py  db.py  undo_manager.py
packaging/: PACKAGING.md  smart_file_organizer.spec
rules/: __init__.py  rule_loader.py
rules/presets/: downloads_cleanup.json  photo_organization.json  work_files.json
tests/: test_batches.py  test_integration.py  test_mappings.py  test_metadata.py  test_pipeline.py  test_rule_loader.py  test_settings.py
